@@ -13,7 +13,7 @@ struct i_silc_gateway {
 };
 
 struct gateway
-*i_silc_gateway_init(const char *hostname, const struct event_arg *args);
+*i_silc_gateway_init(const char *hostname, struct event *event);
 void i_silc_gateway_deinit(struct gateway *gw);
 
 #endif /* __SILC_GATEWAY_H */
