@@ -1,3 +1,8 @@
+2005-07-10 13:35  Andrej Kacian <andrej@kacian.sk>
+	* src: silc-gateway.h, silc-client.c, silc-local-presence.c,
+	       silc-gateway-connection.c, silc-gateway.c: Some fixes to work
+	       with current irssi2
+
 2005-07-10 06:53  Andrej Kacian <andrej@kacian.sk>
 	* src: silc-client.c, silc-client.h, support.c, support.h,
 	       silc-local-presence.c: Load keys directly from memory, if
